Python.txt
## Python Data type

print(type(var_1))

int
float
string
boolean

###########
Int 
can be  +ve to - ve


prefix
0b &  0B binary
0o & 0O - Octal
0x & 0X -hexa

print(0b10)binary
print(0O123)Octal
print(0x102)hexa


String is stored as array 
special char 


#################################

type casting or conversion 




"""  is for  comments
funcations


int()
float()
str()
###########################

Operator in Python


Arithmetic
comparison(relation)
Logical
bitwise
Assigment
indentity
Membership


#############
Arithmetic
 +  - * / %


%- moduler will give reminder 
/ will return float 

// Floor division  it will give only interger 
 
** Power

() pers


PEMDAS

()
**
* / // %
+ -

associativity 

R-L for Exponent 
L-R for * / // %
L-R + -



#################################

Assignment or comparison

= 


a= a+2

a+=2
can be done with  +-* / // %


comparison

==
>=
<=
!= 

print(a=!1)
SyntaxError: invalid syntax

 output of comparison operator is True or False
######################## 
Logical Operator 

and or


not
a= False
print (not a)
True


#####################
bitwise operator 

Binory number 
& -and 
| - or
^ - nor
~ not(compliment)
<< left shift
>> right Shift 



a = 5
b = 4

print (a & b)

a = 0101
b = 0100
    0100  =4


~a 
0101

8421
1010

2'S

1'S +1 = 2'S


<< left shift

print(a<<2) 
a =0101
32 16 8 4 2 1
0  1  0 1 0 0

 20
print(a>>2) 
a =0101

0001



example 

26 & 23

     16 8 4 2 1
26=  1  1 0 1 0
23=  1  0 1 1 1

&=   1  0 0 1 0

####################
Indentity operator

is
is not

Python reuse same object


a= 5
b= 5

location of  5 on memery can be 1000 and this will be assigned to a as  well as b


Memebership Operator 

to check Char in String 

Two Type 

in and not in 



Rounding ()


round(x.yz,1)
= x.Y generanl rounding like NZ
round(xy,-1)
round(XY) 

round(X.5, 1) nearest  even number  


####################################
f-string

f string diffent  variable into string   simple put variable in {} 3.6  
print  (f"{var}") test 1




#################


if and else conditional Statmenets


Input_Number =float( input("Please Enter your number : "))

if Input_Number % 2 == 0:
    print(f"{Input_Number} is Even number")
else:
    print(f"{Input_Number} is Odd number")


#######################

Nested if else &elif

elif is 